--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "express": "^4.17.1",
     "mongoose": "^5.10.1",
     "nodemon": "^2.0.4"
+  },
+  "engines": {
+    "node": "v12.18.2"
   }
 }
